add upload functionality and refactor some code